--- a/index.html
+++ b/index.html
@@ -10,115 +10,53 @@
     <div class="T_SinglePageUI">
       <aside class="O_Sidebar">
         <header class="O_Homebar">
-          <a href="Logo">LOGO</a>
         </header>
 
         <nav class="O_Menu">
-          <!-- ul>li*7>a>{Text} -->
-          <ul>
-            <li>
-              <a href="">Поиск аудитории</a>
-            </li>
-            <li>
-              <a href="">Аудитория сообществ</a>
-            </li>
-            <li>
-              <a href="">Сообщества</a>
-            </li>
-            <li>
-              <a href="">Профили пользователей</a>
-            </li>
-            <li>
-              <a href="">Фильтр баз</a>
-            </li>
-            <li>
-              <a href="">Разное</a>
-            </li>
-            <li>
-              <a href="">Создать проект</a>
-            </li>
-            <li>
-              <a href="">Поиск аудитории</a>
-            </li>
-            <li>
-              <a href="">Аудитория сообществ</a>
-            </li>
-            <li>
-              <a href="">Сообщества</a>
-            </li>
-            <li>
-              <a href="">Профили пользователей</a>
-            </li>
-            <li>
-              <a href="">Фильтр баз</a>
-            </li>
-            <li>
-              <a href="">Разное</a>
-            </li>
-            <li>
-              <a href="">Создать проект</a>
-            </li>
-            <li>
-              <a href="">Поиск аудитории</a>
-            </li>
-            <li>
-              <a href="">Аудитория сообществ</a>
-            </li>
-            <li>
-              <a href="">Сообщества</a>
-            </li>
-            <li>
-              <a href="">Профили пользователей</a>
-            </li>
-            <li>
-              <a href="">Фильтр баз</a>
-            </li>
-            <li>
-              <a href="">Разное</a>
-            </li>
-            <li>
-              <a href="">Создать проект</a>
-            </li>
-            <li>
-              <a href="">Поиск аудитории</a>
-            </li>
-            <li>
-              <a href="">Аудитория сообществ</a>
-            </li>
-          </ul>
+          <div class="scrollable">
+          </div>
         </nav>
 
-        <footer class="O_SidebarFooter">
-          <a href="#">Свернуть</a>
-        </footer>
+        <footer class="O_SidebarFooter"></footer>
       </aside>
 
       <div class="O_ContentWrapper">
         <header class="O_TopbarWrapper">
           <nav class="O_Menubar">
-            <a href="">text</a>
-            <a href="">Icon</a>
+            <div class="left">
+              <a href="#">Мои Задачи</a>
+              <a href="#">Мои Списки</a>
+              <a href="#">Мои Проекты</a>
+            </div>
+
+            <div class="right">
+              <a href="#">Помощь</a>
+
+
+              <nav class="O_UserMenu">
+                <div class="A_UserIcon"></div>
+
+                <nav class="M_UserMenuDropdown">
+                  <ul class="top">
+                    <li><a href="#">Управление доступом</a></li>
+                    <li><a href="#">Настройки профиля</a></li>
+                  </ul>
+
+                  <ul class="bottom">
+                    <li><a href="#">Выход</a></li>
+                  </ul>
+                </nav>
+              </nav>
+            </div>
           </nav>
+
           <div class="O_SearchBar"></div>
         </header>
 
         <div class="O_Content">
-          <p>я так понимаю, что у Вас должен контент постоянно меняться, в зависимости от выбранных вкладок в каком-то меню. Я тоже сталкивался с моментами, когда нужно было, чтоб футер четко был внизу при , практически пустом контенте (даже немного скролил).</p>
-          <p>я так понимаю, что у Вас должен контент постоянно меняться, в зависимости от выбранных вкладок в каком-то меню. Я тоже сталкивался с моментами, когда нужно было, чтоб футер четко был внизу при , практически пустом контенте (даже немного скролил).</p>
-          <p>я так понимаю, что у Вас должен контент постоянно меняться, в зависимости от выбранных вкладок в каком-то меню. Я тоже сталкивался с моментами, когда нужно было, чтоб футер четко был внизу при , практически пустом контенте (даже немного скролил).</p>
-          <p>я так понимаю, что у Вас должен контент постоянно меняться, в зависимости от выбранных вкладок в каком-то меню. Я тоже сталкивался с моментами, когда нужно было, чтоб футер четко был внизу при , практически пустом контенте (даже немного скролил).</p>
-          <p>я так понимаю, что у Вас должен контент постоянно меняться, в зависимости от выбранных вкладок в каком-то меню. Я тоже сталкивался с моментами, когда нужно было, чтоб футер четко был внизу при , практически пустом контенте (даже немного скролил).</p>
-          <p>я так понимаю, что у Вас должен контент постоянно меняться, в зависимости от выбранных вкладок в каком-то меню. Я тоже сталкивался с моментами, когда нужно было, чтоб футер четко был внизу при , практически пустом контенте (даже немного скролил).</p>
-          <p>я так понимаю, что у Вас должен контент постоянно меняться, в зависимости от выбранных вкладок в каком-то меню. Я тоже сталкивался с моментами, когда нужно было, чтоб футер четко был внизу при , практически пустом контенте (даже немного скролил).</p>
-          <p>я так понимаю, что у Вас должен контент постоянно меняться, в зависимости от выбранных вкладок в каком-то меню. Я тоже сталкивался с моментами, когда нужно было, чтоб футер четко был внизу при , практически пустом контенте (даже немного скролил).</p>
-          <p>я так понимаю, что у Вас должен контент постоянно меняться, в зависимости от выбранных вкладок в каком-то меню. Я тоже сталкивался с моментами, когда нужно было, чтоб футер четко был внизу при , практически пустом контенте (даже немного скролил).</p>
-          <p>я так понимаю, что у Вас должен контент постоянно меняться, в зависимости от выбранных вкладок в каком-то меню. Я тоже сталкивался с моментами, когда нужно было, чтоб футер четко был внизу при , практически пустом контенте (даже немного скролил).</p>
-          <p>я так понимаю, что у Вас должен контент постоянно меняться, в зависимости от выбранных вкладок в каком-то меню. Я тоже сталкивался с моментами, когда нужно было, чтоб футер четко был внизу при , практически пустом контенте (даже немного скролил).</p>
         </div>
 
-        <footer class="O_ContentFooter">
-          <p>25 страниц</p>
-        </footer>
+        <footer class="O_ContentFooter"></footer>
       </div>
     </div>
   </body>
