--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 
 
               <nav class="O_UserMenu">
-                <div class="A_UserIcon"></div>
+                <div class="A_UserIcon">
+                  <figure style="background-image: url(images/user.svg)">
+
+                  </figure>
+                </div>
 
                 <nav class="M_UserMenuDropdown">
                   <ul class="top">
