--- a/index.html
+++ b/index.html
@@ -24,21 +24,17 @@
         <header class="O_TopbarWrapper">
           <nav class="O_Menubar">
             <div class="left">
-              <a href="#">Мои Задачи</a>
-              <a href="#">Мои Списки</a>
-              <a href="#">Мои Проекты</a>
+              <a class="A_MenubarLink" href="#">Мои Задачи</a>
+              <a class="A_MenubarLink" href="#">Мои Списки</a>
+              <a class="A_MenubarLink active" href="#">Мои Проекты</a>
             </div>
 
             <div class="right">
-              <a href="#">Помощь</a>
+              <a class="A_MenubarLink" href="#">Помощь</a>
 
 
               <nav class="O_UserMenu">
-                <div class="A_UserIcon">
-                  <figure style="background-image: url(images/user.svg)">
-
-                  </figure>
-                </div>
+                <div class="A_UserIcon"></div>
 
                 <nav class="M_UserMenuDropdown">
                   <ul class="top">
