--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
                 <nav class="M_UserMenuDropdown">
                   <ul class="top">
-                    <li><a href="#">Управление доступом</a></li>
-                    <li><a href="#">Настройки профиля</a></li>
+                    <li><a class="A_DropdownMenuItem" href="#">Управление доступом</a></li>
+                    <li><a class="A_DropdownMenuItem" href="#">Настройки профиля</a></li>
                   </ul>
 
                   <ul class="bottom">
-                    <li><a href="#">Выход</a></li>
+                    <li><a class="A_DropdownMenuItem" href="#">Выход</a></li>
                   </ul>
                 </nav>
               </nav>
