--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title></title>
 
     <link rel="stylesheet" href="stylesheets/style.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+    <script src="javascript/jquery-3.3.1.min.js" charset="utf-8"></script>
+    <script src="javascript/O_MenuItem.js" charset="utf-8"></script>
+    
   </head>
   <body>
     <div class="T_SinglePageUI">
@@ -14,10 +18,144 @@
 
         <nav class="O_Menu">
           <div class="scrollable">
+            <div class="O_MenuItem">
+              <a href="#" class="A_MenuItemButtom">
+                <span class="icon">
+                  <i class="fas fa-users"></i>
+                </span>
+
+                <span>Аудитория сообществ</span>
+              </a>
+
+              <div class="M_Submenu">
+                <a href="#" class="A_SubmenuItem">Элемент 1</a>
+                <a href="#" class="A_SubmenuItem">Элемент 2</a>
+                <a href="#" class="A_SubmenuItem">Элемент 3</a>
+                <a href="#" class="A_SubmenuItem">Элемент 4</a>
+                <a href="#" class="A_SubmenuItem">Элемент 5</a>
+                <a href="#" class="A_SubmenuItem">Элемент 6</a>
+                <a href="#" class="A_SubmenuItem">Элемент 7</a>
+                <a href="#" class="A_SubmenuItem">Элемент 8</a>
+              </div>
+            </div>
+
+            <div class="O_MenuItem">
+              <a href="#" class="A_MenuItemButtom">
+                <span class="icon">
+                  <i class="fas fa-comments"></i>
+                </span>
+
+                <span>Сообщества</span>
+              </a>
+
+              <div class="M_Submenu">
+                <a href="#" class="A_SubmenuItem">Элемент 1</a>
+                <a href="#" class="A_SubmenuItem">Элемент 2</a>
+                <a href="#" class="A_SubmenuItem">Элемент 3</a>
+                <a href="#" class="A_SubmenuItem">Элемент 4</a>
+                <a href="#" class="A_SubmenuItem">Элемент 5</a>
+                <a href="#" class="A_SubmenuItem">Элемент 6</a>
+                <a href="#" class="A_SubmenuItem">Элемент 7</a>
+                <a href="#" class="A_SubmenuItem">Элемент 8</a>
+              </div>
+            </div>
+
+            <div class="O_MenuItem">
+              <a href="#" class="A_MenuItemButtom">
+                <span class="icon">
+                  <i class="fas fa-user-plus"></i>
+                </span>
+
+                <span>Профили пользователей</span>
+              </a>
+
+              <div class="M_Submenu">
+                <a href="#" class="A_SubmenuItem">Элемент 1</a>
+                <a href="#" class="A_SubmenuItem">Элемент 2</a>
+                <a href="#" class="A_SubmenuItem">Элемент 3</a>
+                <a href="#" class="A_SubmenuItem">Элемент 4</a>
+                <a href="#" class="A_SubmenuItem">Элемент 5</a>
+                <a href="#" class="A_SubmenuItem">Элемент 6</a>
+                <a href="#" class="A_SubmenuItem">Элемент 7</a>
+                <a href="#" class="A_SubmenuItem">Элемент 8</a>
+              </div>
+            </div>
+
+            <div class="O_MenuItem">
+              <a href="#" class="A_MenuItemButtom">
+                <span class="icon">
+                  <i class="fas fa-database"></i>
+                </span>
+
+                <span>Фильтр баз</span>
+              </a>
+
+              <div class="M_Submenu">
+                <a href="#" class="A_SubmenuItem">Элемент 1</a>
+                <a href="#" class="A_SubmenuItem">Элемент 2</a>
+                <a href="#" class="A_SubmenuItem">Элемент 3</a>
+                <a href="#" class="A_SubmenuItem">Элемент 4</a>
+                <a href="#" class="A_SubmenuItem">Элемент 5</a>
+                <a href="#" class="A_SubmenuItem">Элемент 6</a>
+                <a href="#" class="A_SubmenuItem">Элемент 7</a>
+                <a href="#" class="A_SubmenuItem">Элемент 8</a>
+              </div>
+            </div>
+
+            <div class="O_MenuItem">
+              <a href="#" class="A_MenuItemButtom">
+                <span class="icon">
+                  <i class="fas fa-ellipsis-h"></i>
+                </span>
+
+                <span>Разное</span>
+              </a>
+
+              <div class="M_Submenu">
+                <a href="#" class="A_SubmenuItem">Элемент 1</a>
+                <a href="#" class="A_SubmenuItem">Элемент 2</a>
+                <a href="#" class="A_SubmenuItem">Элемент 3</a>
+                <a href="#" class="A_SubmenuItem">Элемент 4</a>
+                <a href="#" class="A_SubmenuItem">Элемент 5</a>
+                <a href="#" class="A_SubmenuItem">Элемент 6</a>
+                <a href="#" class="A_SubmenuItem">Элемент 7</a>
+                <a href="#" class="A_SubmenuItem">Элемент 8</a>
+              </div>
+            </div>
+
+            <div class="O_LastMenu">
+              <div class="O_LastMenuItem">
+                <a href="#" class="A_LastMenuItemButton">
+                  <span class="icon">
+                    <i class="far fa-folder"></i>
+                  </span>
+                  <span>Создать проект</span>
+                </a>
+              </div>
+
+              <div class="O_LastMenuItem">
+                <a href="#" class="A_LastMenuItemButton">
+                  <span class="icon">
+                    <i class="fas fa-list-ul"></i>
+                  </span>
+                  <span>Загрузить список</span>
+                </a>
+              </div>
+            </div>
           </div>
         </nav>
 
-        <footer class="O_SidebarFooter"></footer>
+        <footer class="O_SidebarFooter">
+          <div class="M_FooterButton">
+            <a href="#" class="A_FooterItem">
+              <span class="icon">
+                <i class="fas fa-angle-double-left"></i>
+              </span>
+
+              <span>Свернуть</span>
+            </a>
+          </div>
+        </footer>
       </aside>
 
       <div class="O_ContentWrapper">
@@ -32,12 +170,10 @@
             <div class="right">
               <a class="A_MenubarLink" href="#">Помощь</a>
 
-
               <nav class="O_UserMenu">
                 <div class="A_UserIcon"></div>
 
                 <nav class="M_UserMenuDropdown">
-          
                   <ul class="top">
                     <li><a class="A_DropdownMenuItem" href="#">Управление доступом</a></li>
                     <li><a class="A_DropdownMenuItem" href="#">Настройки профиля</a></li>
