--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
     <script src="javascript/jquery-3.3.1.min.js" charset="utf-8"></script>
     <script src="javascript/O_MenuItem.js" charset="utf-8"></script>
-    
+
   </head>
   <body>
     <div class="T_SinglePageUI">
@@ -18,128 +18,132 @@
 
         <nav class="O_Menu">
           <div class="scrollable">
-            <div class="O_MenuItem">
-              <a href="#" class="A_MenuItemButtom">
-                <span class="icon">
-                  <i class="fas fa-users"></i>
-                </span>
-
-                <span>Аудитория сообществ</span>
-              </a>
-
-              <div class="M_Submenu">
-                <a href="#" class="A_SubmenuItem">Элемент 1</a>
-                <a href="#" class="A_SubmenuItem">Элемент 2</a>
-                <a href="#" class="A_SubmenuItem">Элемент 3</a>
-                <a href="#" class="A_SubmenuItem">Элемент 4</a>
-                <a href="#" class="A_SubmenuItem">Элемент 5</a>
-                <a href="#" class="A_SubmenuItem">Элемент 6</a>
-                <a href="#" class="A_SubmenuItem">Элемент 7</a>
-                <a href="#" class="A_SubmenuItem">Элемент 8</a>
-              </div>
-            </div>
-
-            <div class="O_MenuItem">
-              <a href="#" class="A_MenuItemButtom">
-                <span class="icon">
-                  <i class="fas fa-comments"></i>
-                </span>
-
-                <span>Сообщества</span>
-              </a>
-
-              <div class="M_Submenu">
-                <a href="#" class="A_SubmenuItem">Элемент 1</a>
-                <a href="#" class="A_SubmenuItem">Элемент 2</a>
-                <a href="#" class="A_SubmenuItem">Элемент 3</a>
-                <a href="#" class="A_SubmenuItem">Элемент 4</a>
-                <a href="#" class="A_SubmenuItem">Элемент 5</a>
-                <a href="#" class="A_SubmenuItem">Элемент 6</a>
-                <a href="#" class="A_SubmenuItem">Элемент 7</a>
-                <a href="#" class="A_SubmenuItem">Элемент 8</a>
-              </div>
-            </div>
-
-            <div class="O_MenuItem">
-              <a href="#" class="A_MenuItemButtom">
-                <span class="icon">
-                  <i class="fas fa-user-plus"></i>
-                </span>
-
-                <span>Профили пользователей</span>
-              </a>
-
-              <div class="M_Submenu">
-                <a href="#" class="A_SubmenuItem">Элемент 1</a>
-                <a href="#" class="A_SubmenuItem">Элемент 2</a>
-                <a href="#" class="A_SubmenuItem">Элемент 3</a>
-                <a href="#" class="A_SubmenuItem">Элемент 4</a>
-                <a href="#" class="A_SubmenuItem">Элемент 5</a>
-                <a href="#" class="A_SubmenuItem">Элемент 6</a>
-                <a href="#" class="A_SubmenuItem">Элемент 7</a>
-                <a href="#" class="A_SubmenuItem">Элемент 8</a>
-              </div>
-            </div>
-
-            <div class="O_MenuItem">
-              <a href="#" class="A_MenuItemButtom">
-                <span class="icon">
-                  <i class="fas fa-database"></i>
-                </span>
-
-                <span>Фильтр баз</span>
-              </a>
-
-              <div class="M_Submenu">
-                <a href="#" class="A_SubmenuItem">Элемент 1</a>
-                <a href="#" class="A_SubmenuItem">Элемент 2</a>
-                <a href="#" class="A_SubmenuItem">Элемент 3</a>
-                <a href="#" class="A_SubmenuItem">Элемент 4</a>
-                <a href="#" class="A_SubmenuItem">Элемент 5</a>
-                <a href="#" class="A_SubmenuItem">Элемент 6</a>
-                <a href="#" class="A_SubmenuItem">Элемент 7</a>
-                <a href="#" class="A_SubmenuItem">Элемент 8</a>
-              </div>
-            </div>
-
-            <div class="O_MenuItem">
-              <a href="#" class="A_MenuItemButtom">
-                <span class="icon">
-                  <i class="fas fa-ellipsis-h"></i>
-                </span>
-
-                <span>Разное</span>
-              </a>
-
-              <div class="M_Submenu">
-                <a href="#" class="A_SubmenuItem">Элемент 1</a>
-                <a href="#" class="A_SubmenuItem">Элемент 2</a>
-                <a href="#" class="A_SubmenuItem">Элемент 3</a>
-                <a href="#" class="A_SubmenuItem">Элемент 4</a>
-                <a href="#" class="A_SubmenuItem">Элемент 5</a>
-                <a href="#" class="A_SubmenuItem">Элемент 6</a>
-                <a href="#" class="A_SubmenuItem">Элемент 7</a>
-                <a href="#" class="A_SubmenuItem">Элемент 8</a>
-              </div>
-            </div>
-
-            <div class="O_LastMenu">
-              <div class="O_LastMenuItem">
-                <a href="#" class="A_LastMenuItemButton">
+            <div>
+              <div class="O_MenuItem">
+                <a href="#" class="A_MenuItemButtom">
                   <span class="icon">
-                    <i class="far fa-folder"></i>
+                    <i class="fas fa-users"></i>
                   </span>
-                  <span>Создать проект</span>
+
+                  <span>Аудитория сообществ</span>
                 </a>
+
+                <div class="M_Submenu">
+                  <a href="#" class="A_SubmenuItem">Элемент 1</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 2</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 3</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 4</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 5</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 6</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 7</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 8</a>
+                </div>
               </div>
 
-              <div class="O_LastMenuItem">
-                <a href="#" class="A_LastMenuItemButton">
+              <div class="O_MenuItem">
+                <a href="#" class="A_MenuItemButtom">
                   <span class="icon">
-                    <i class="fas fa-list-ul"></i>
+                    <i class="fas fa-comments"></i>
                   </span>
-                  <span>Загрузить список</span>
+
+                  <span>Сообщества</span>
                 </a>
+
+                <div class="M_Submenu">
+                  <a href="#" class="A_SubmenuItem">Элемент 1</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 2</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 3</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 4</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 5</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 6</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 7</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 8</a>
+                </div>
+              </div>
+
+              <div class="O_MenuItem">
+                <a href="#" class="A_MenuItemButtom">
+                  <span class="icon">
+                    <i class="fas fa-user-plus"></i>
+                  </span>
+
+                  <span>Профили пользователей</span>
+                </a>
+
+                <div class="M_Submenu">
+                  <a href="#" class="A_SubmenuItem">Элемент 1</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 2</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 3</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 4</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 5</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 6</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 7</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 8</a>
+                </div>
+              </div>
+
+              <div class="O_MenuItem">
+                <a href="#" class="A_MenuItemButtom">
+                  <span class="icon">
+                    <i class="fas fa-database"></i>
+                  </span>
+
+                  <span>Фильтр баз</span>
+                </a>
+
+                <div class="M_Submenu">
+                  <a href="#" class="A_SubmenuItem">Элемент 1</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 2</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 3</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 4</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 5</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 6</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 7</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 8</a>
+                </div>
+              </div>
+
+              <div class="O_MenuItem">
+                <a href="#" class="A_MenuItemButtom">
+                  <span class="icon">
+                    <i class="fas fa-ellipsis-h"></i>
+                  </span>
+
+                  <span>Разное</span>
+                </a>
+
+                <div class="M_Submenu">
+                  <a href="#" class="A_SubmenuItem">Элемент 1</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 2</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 3</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 4</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 5</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 6</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 7</a>
+                  <a href="#" class="A_SubmenuItem">Элемент 8</a>
+                </div>
+              </div>
+            </div>
+
+            <div>
+              <div class="O_LastMenu">
+                <div class="O_LastMenuItem">
+                  <a href="#" class="A_LastMenuItemButton">
+                    <span class="icon">
+                      <i class="far fa-folder"></i>
+                    </span>
+                    <span>Создать проект</span>
+                  </a>
+                </div>
+
+                <div class="O_LastMenuItem">
+                  <a href="#" class="A_LastMenuItemButton">
+                    <span class="icon">
+                      <i class="fas fa-list-ul"></i>
+                    </span>
+                    <span>Загрузить список</span>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
