--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
     <script src="javascript/jquery-3.3.1.min.js" charset="utf-8"></script>
     <script src="javascript/O_MenuItem.js" charset="utf-8"></script>
+    <script src="javascript/O_PerPageMenu.js" charset="utf-8"></script>
 
   </head>
   <body>
@@ -223,7 +224,22 @@
               <i class="fas fa-chevron-right"></i>
             </a>
 
+
           </div>
+          <div class="O_PerPageMenu">
+            <div class="A_PerPageButton">
+              <i class="far fa-list-alt"></i>
+              <span></span>
+            </div>
+            <ul class="M_PerPageDropdown">
+              <li><a class="A_DropdownMenuItem active" href="#">25 на странице</a></li>
+              <li><a class="A_DropdownMenuItem" href="#">100 на странице</a></li>
+              <li><a class="A_DropdownMenuItem" href="#">500 на странице</a></li>
+              <li><a class="A_DropdownMenuItem" href="#">1000 на странице</a></li>
+            </ul>
+
+          </div>
+
         </footer>
       </div>
     </div>
