--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
     <script src="javascript/jquery-3.3.1.min.js" charset="utf-8"></script>
     <script src="javascript/O_MenuItem.js" charset="utf-8"></script>
+    <script src="javascript/O_Panagination.js" charset="utf-8"></script>
     <script src="javascript/O_PerPageMenu.js" charset="utf-8"></script>
 
   </head>
